# template-autograding-cpp23

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: classroom.yml
src/: student.cppm
tests/: tests.cpp
